Changes towards version 0.4:
- The unix build script is now able to detect SDL on Darwin (bug #358) - SvdB
- Resource units given more obviously when ordering a probe to
  self-destruct (bug #586), from Nic.
- Shipyard "Combat Energy" changed to reflect the recharge rate (bug #522).
  Also, some cleanups. Thanks and apologies to Nic.
- Added lots of debugging functions, SvdB
- Cleaned up use of the DEBUG define, SvdB
- Talking Pet .txt file corrected to match the .ogg files,
  and talkpet.ts corrections, from Nic
- Abstracted window-drawing code from confirm.c -Michael
- Fixed blue comms screen problem (bug #363), from Joel Holveck & Nic
- Automatically adding an icon for Darwin builds, from Nic
- Fixed Roster-F10-Quit bug (#591), - Michael
- Restructured starcon2.c, with better checks for argument parsing,
  and consistent error messages. - SvdB
- Restructuring of the unix build scripts.
  Also, interrupted dependency builds are now detected. - SvdB
- Unix build: Make it possible to use another directory than the current
  one for putting the build data in (such as build.vars, config.state,
  the obj/ dir, and the final binary). - SvdB
- Fixed various odd behaviors when loading from HyperSpace (bug #587), 
  from Nic and Michael
- Added new 'triscan' scaler; derived from scale2x[.sf.net] -Alex
- Space marines die in a self-destructing Scout (Bug #445), from Nic
- Added the -l option to produce logfiles (bug #560), from Nic
- Zoq-Fot-Pik speech properly vertically centered (bug #579), from Nic
- Input code refactoring, phase 2: All player input is brokered by 
  DoInput -Michael
- Updated .cvsignore commands, from Nic
- Fixed a keyrepeatbug from when the player cancels out of the
  Starmap in IP -Michael
- IP_taskfunc now uses PulsedInputState instead of handling its
  own debounce delays -Michael
- Input code refactoring, phase 1: Replaced messy structs with an
  array indexed by an enum. -Michael